# WindowSharingHider

./: .gitignore  Cargo.toml  README.md  build.rs
WindowSharingHider/: MainWindow.Designer.cs  MainWindow.cs  WindowHandler.cs
src/: app.rs  lib.rs  main.rs  model.rs  policy.rs  worker.rs
src/platform/: mod.rs
src/platform/windows/: affinity.rs  enumeration.rs  icons.rs  mod.rs  remote.rs  resources.rs
ui/: app.slint
